fixed mobile alignment on home screen

--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -78,3 +78,9 @@
   .first-availability {
     border-bottom: 1.5px lightgray solid
   }
+
+  @media screen and (max-width: 400px) {
+    .highways {
+        width: 100%;
+    }
+  }
