--- a/src/app/princeton/princeton.component.css
+++ b/src/app/princeton/princeton.component.css
@@ -50,3 +50,9 @@
 .p-grid {
     align-items: center
 }
+
+@media screen and (max-width: 400px) {
+    .ui-card-body {
+        padding: 0px;
+    }
+}
